--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,13 @@ jobs:
         dotnet-version: '8.0.x'
         
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore SentimentAnalysis.csproj
       
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build SentimentAnalysis.csproj --configuration Release --no-restore
       
     - name: Publish for Linux
-      run: dotnet publish --configuration Release --no-build --output ./publish --runtime linux-x64 --self-contained false
+      run: dotnet publish SentimentAnalysis.csproj --configuration Release --no-build --output ./publish --runtime linux-x64 --self-contained false
       
     - name: Login to Azure
       uses: azure/login@v2
