--- a/.github/workflows/deploy-advanced.yml
+++ b/.github/workflows/deploy-advanced.yml
@@ -26,13 +26,13 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
     - name: Restore dependencies
-      run: dotnet restore SentimentAnalysis.csproj
+      run: dotnet restore SentimentAnalysisSolution.sln
       
     - name: Build
-      run: dotnet build SentimentAnalysis.csproj --configuration Release --no-restore
+      run: dotnet build SentimentAnalysisSolution.sln --configuration Release --no-restore
       
     - name: Test
-      run: dotnet test SentimentAnalysis.csproj --configuration Release --no-build --verbosity normal
+      run: dotnet test SentimentAnalysisSolution.sln --configuration Release --no-build --verbosity normal
       continue-on-error: true
       
     - name: Publish
